Legg til støtte for offset og limit
