# openapi/src/main/resources/aktivitetslogg-api.yaml
@@ -11,6 +11,21 @@ servers:
 paths:
   /aktivitetslogg:
     get:
+      parameters:
+        - name: limit
+          in: query
+          required: false
+          schema:
+            type: number
+            minimum: 1
+            default: 50
+        - name: offset
+          in: query
+          required: false
+          schema:
+            type: number
+            minimum: 0
+            default: 0
       responses:
         '200':
           content:
